name:                       std-io
version:                    0.2.0.0
synopsis:                   A simple and high performance IO toolkit for Haskell
description:                This package provides a simple and high performance IO toolkit for Haskell, including
                            packed vectors, unicode texts, socket, file system, timers and more!
license:                    BSD3
license-file:               ../LICENSE
author:                     Dong Han, Tao He
maintainer:                 winterland1989@gmail.com
copyright:                  (c) Dong Han, 2017-2018
                            (c) Tao He, 2017-2019
category:                   Data
build-type:                 Simple
cabal-version:              >=1.10
homepage:                   https://github.com/haskell-stdio/stdio
bug-reports:                https://github.com/haskell-stdio/stdio/issues

extra-source-files:         ../ChangeLog.md
                            ../README.md
                            ../LICENSE

                            include/hs_uv.h
                            cbits/hs_uv_base.c
                            cbits/hs_uv_stream.c
                            cbits/hs_uv_udp.c
                            cbits/hs_uv_file.c

source-repository head
    type:     git
    location: git://github.com/haskell-stdio/stdio.git

flag no-pkg-config
    description: Don't use pkg-config to check for library dependences
    default: False
    manual: True

flag integer-simple
    description:
        Use the [simple integer library](http://hackage.haskell.org/package/integer-simple)
        instead of [integer-gmp](http://hackage.haskell.org/package/integer-gmp)
    default: False
    manual: False

library
    exposed-modules:        Std.IO.Resource
                            Std.IO.LowResTimer
                            Std.IO.Logger
                            Std.IO.Exception 
                            Std.IO.Buffered
                            Std.IO.FileSystem
                            Std.IO.FileSystemT
                            Std.IO.TCP
                            Std.IO.UDP
                            Std.IO.SockAddr
                            Std.IO.StdStream

                            Std.IO.UV.Errno
                            Std.IO.UV.FFI
                            Std.IO.UV.Manager

    build-depends:          base                    >=4.12 && <5.0
                          , ghc-prim                >= 0.5.3 && <= 0.5.4
                          , primitive               >= 0.6.4 && <= 0.6.5
                          , exceptions              == 0.10.*
                          , scientific              == 0.3.*
                          , hashable                == 1.2.*
                          , case-insensitive        == 1.2.*
                          , time                    >= 1.8 && < 2.0
                          , deepseq                 >= 1.4 && < 1.5
                          , QuickCheck              >= 2.10
                          , template-haskell        == 2.14.*
                          , stm                     == 2.5.*
                          , std-data
                          , unordered-containers    == 0.2.*
                          , tagged                  == 0.8.*

    if flag(integer-simple)
        cpp-options:        -DINTEGER_SIMPLE
        build-depends:      integer-simple >= 0.1 && < 0.5
    else
        cpp-options:        -DINTEGER_GMP
        build-depends:      integer-gmp >= 0.2 && < 1.1

    include-dirs:           include
    includes:               hs_uv.h
    install-includes:       hs_uv.h
    cc-options:             -march=native
    c-sources:              cbits/hs_uv_base.c
                            cbits/hs_uv_stream.c
                            cbits/hs_uv_udp.c
                            cbits/hs_uv_file.c

    if flag(no-pkg-config)
        extra-libraries:    uv
    else
        pkgconfig-depends:  libuv >= 1.14

    default-language:       Haskell2010
    build-tools:            hsc2hs, hspec-discover
    ghc-options:            -Wall

test-suite std-io-test
    type:                   exitcode-stdio-1.0
    main-is:                Spec.hs
    hs-source-dirs:         test/
    build-depends:          base
                          , std-io
                          , std-data
                          , hspec                   >= 2.5.4
                          , hashable
                          , HUnit
                          , QuickCheck              >= 2.10
                          , quickcheck-instances
                          , word8
                          , scientific
                          , primitive

    other-modules:          Std.IO.FileSystemSpec
                            Std.IO.FileSystemTSpec
                            Std.IO.LowResTimerSpec
                            Std.IO.ResourceSpec
                            Std.IO.UDPSpec

    ghc-options:            -threaded
    default-language:       Haskell2010 

    if flag(integer-simple)
        cpp-options: -DINTEGER_SIMPLE
        build-depends: integer-simple >= 0.1 && < 0.5
    else
        cpp-options: -DINTEGER_GMP
        build-depends: integer-gmp >= 0.2 && < 1.1

